syntax = "proto3";

package patient;

service PatientService {
  rpc GetPatient(GetPatientRequest) returns (PatientResponse);
  rpc CreatePatient(CreatePatientRequest) returns (PatientResponse);
  rpc GetPatientsByDoctor(DoctorIdRequest) returns (PatientListResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (PatientResponse);         
  rpc DeletePatient(DeletePatientRequest) returns (DeletePatientResponse);   
}


message Patient {
  string id = 1;
  string name = 2;
  string dob = 3;
  string doctor_id = 4;
}

message GetPatientRequest {
  string id = 1;
}

message CreatePatientRequest {
  string name = 1;
  string dob = 2;
  string doctor_id = 3;
}

message UpdatePatientRequest {
  string id = 1;
  string name = 2;
  string dob = 3;
  string doctor_id = 4;
}

message DoctorIdRequest {
  string doctor_id = 1;
}

message DeletePatientRequest {
  string id = 1;
}

message DeletePatientResponse {
  string message = 1;
}

message PatientResponse {
  Patient patient = 1;
}

message PatientListResponse {
  repeated Patient patients = 1;
}
